--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,11 @@
 .idea/**/usage.statistics.xml
 .idea/**/dictionaries
 .idea/**/shelf
+.idea/modules.xml
+.idea/misc.xml
+.idea/modules/*.iml
+*.iml
+
 
 # Generated files
 .idea/**/contentModel.xml
