--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-
+# Temp files
+*~
 
 # Created by https://www.gitignore.io/api/java,gradle,intellij
 # Edit at https://www.gitignore.io/?templates=java,gradle,intellij
@@ -17,7 +18,7 @@
 .idea/misc.xml
 .idea/modules/*.iml
 *.iml
-
+.idea/kotlinc.xml
 
 # Generated files
 .idea/**/contentModel.xml
