--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,9 @@ dependencies {
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.3'
     implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.9.3'
     implementation group: 'com.github.rvesse', name: 'airline', version: '2.2.0'
+    // https://mvnrepository.com/artifact/org.apache.commons/commons-exec
+    implementation group: 'org.apache.commons', name: 'commons-exec', version: '1.3'
+
 
     testImplementation group: 'junit', name: 'junit', version: '4.12'
 }
