--- a/build.gradle
+++ b/build.gradle
@@ -26,12 +26,17 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 
     implementation 'com.github.ipfs:java-ipfs-api:v1.2.2'
+
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.3'
     implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.9.3'
+
     implementation group: 'com.github.rvesse', name: 'airline', version: '2.2.0'
     // https://mvnrepository.com/artifact/org.apache.commons/commons-exec
     implementation group: 'org.apache.commons', name: 'commons-exec', version: '1.3'
+    implementation 'org.zeroturnaround:zt-exec:1.10'
 
+    implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
+    implementation group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.25'
 
     testImplementation group: 'junit', name: 'junit', version: '4.12'
 }
