--- a/build.gradle
+++ b/build.gradle
@@ -23,21 +23,28 @@ repositories {
 }
 
 dependencies {
+    // Kotlin
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-
+    // IPFS
     implementation 'com.github.ipfs:java-ipfs-api:v1.2.2'
-
+    // JSON De-/Serialization
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.3'
     implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.9.3'
-
+    // CLI parser
     implementation group: 'com.github.rvesse', name: 'airline', version: '2.2.0'
-    // https://mvnrepository.com/artifact/org.apache.commons/commons-exec
-    implementation group: 'org.apache.commons', name: 'commons-exec', version: '1.3'
-    implementation 'org.zeroturnaround:zt-exec:1.10'
+    // External Processes
+    implementation group: 'org.apache.commons', name: 'commons-exec', version: '1.3' // weak
+    implementation 'org.zeroturnaround:zt-exec:1.10' // Superb
 
+    // Logging
     implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
     implementation group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.25'
 
+    // Security
+    implementation group: 'org.bouncycastle', name: 'bcprov-jdk15on', version: '1.60'
+
+
+    // Testing
     testImplementation group: 'junit', name: 'junit', version: '4.12'
 }
 
