--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ sourceCompatibility = 1.8
 repositories {
     mavenCentral()
     maven { url 'https://jitpack.io' }
+    maven { url "http://sandec.bintray.com/repo"}
 }
 
 dependencies {
@@ -43,6 +44,9 @@ dependencies {
     // Security
     implementation group: 'org.bouncycastle', name: 'bcprov-jdk15on', version: '1.60'
     implementation group: 'org.bouncycastle', name: 'bcpkix-jdk15on', version: '1.60'
+
+    // Markdown
+    implementation "com.sandec:mdfx:0.1.1"
 
 
     // Testing
