--- a/build.gradle
+++ b/build.gradle
@@ -25,39 +25,46 @@ repositories {
 
 dependencies {
     // Kotlin
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     // IPFS
-    implementation 'com.github.ipfs:java-ipfs-api:v1.2.2'
+    compile 'com.github.ipfs:java-ipfs-api:v1.2.2'
     // JSON De-/Serialization
-    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.3'
-    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.9.3'
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.3'
+    compile 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.9.3'
     // CLI parser
-    implementation group: 'com.github.rvesse', name: 'airline', version: '2.2.0'
+    compile group: 'com.github.rvesse', name: 'airline', version: '2.2.0'
     // External Processes
-    implementation group: 'org.apache.commons', name: 'commons-exec', version: '1.3' // weak
-    implementation 'org.zeroturnaround:zt-exec:1.10' // Superb
+    compile group: 'org.apache.commons', name: 'commons-exec', version: '1.3' // weak
+    compile 'org.zeroturnaround:zt-exec:1.10' // Superb
 
     // Logging
-    implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
-    implementation group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.25'
+    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
+    compile group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.25'
 
     // Security
-    implementation group: 'org.bouncycastle', name: 'bcprov-jdk15on', version: '1.60'
-    implementation group: 'org.bouncycastle', name: 'bcpkix-jdk15on', version: '1.60'
+    compile group: 'org.bouncycastle', name: 'bcprov-jdk15on', version: '1.60'
+    compile group: 'org.bouncycastle', name: 'bcpkix-jdk15on', version: '1.60'
 
     // Markdown
-    implementation "com.sandec:mdfx:0.1.1"
+    compile "com.sandec:mdfx:0.1.1"
 
-    implementation 'com.atlassian.commonmark:commonmark:0.12.1'
+    compile 'com.atlassian.commonmark:commonmark:0.12.1'
 
 
     // Testing
-    testImplementation group: 'junit', name: 'junit', version: '4.12'
+    testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
-compileKotlin {
-    kotlinOptions.jvmTarget = "1.8"
+
+jar {
+    from {
+        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
+    }{
+        exclude 'META-INF/*.RSA', 'META-INF/*.SF', 'META-INF/*.DSA'
+    }
+    manifest{
+        attributes 'Main-Class': 'com.github.sauterl.iop2p.Main'
+    }
 }
-compileTestKotlin {
-    kotlinOptions.jvmTarget = "1.8"
-}
+
+
